Fixed some of the css oddities Icons not centered in circles Circles not always being circle

--- a/html/css/style.css
+++ b/html/css/style.css
@@ -2922,6 +2922,7 @@ ul.check li:last-child {
 	-webkit-border-radius: 2px;
 	border-radius: 2px;
 	vertical-align: top;
+	min-height: 62px;
 }
 .stats.stats-block { 
 	display: block; 
@@ -2988,6 +2989,10 @@ ul.check li:last-child {
 }
 /* 1.6.2.1 Statistic Icon
 ----------------------------------------------------------------------------- */
+.stats.summary .icon.circle > span[class*='icone-'] {
+	margin-right: 0;
+}
+
 .stats.summary > .icon {
 	position: absolute;
 	top: -1px;
@@ -3011,6 +3016,9 @@ ul.check li:last-child {
 	min-width: 50px;
 	border-right: none;
 	border-radius: 40px;
+	box-sizing: border-box;
+	height: 50px;
+	width: 50px;
 	background-color: #eee;
 	color: #555;
 	font-size: 28px;
